specs/demo/new-add-on-Labs/wordpress-mysql-example/service-wp.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    name: wpfrontend
  name: wpfrontend
spec: 
  ports:
    # the port that this service should serve on
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  # label keys and values that must match in order to receive traffic for this service
  selector: 
    name: wordpress
