specs/demo/new-add-on-Labs/wordpress-mysql-example/create-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "wordpress.pod25.example.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wpfrontend
            port:
              number: 80
